plugins {
    id 'java'
    id 'org.springframework.boot' version '3.4.3'
    id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.patriot'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation 'com.fasterxml.jackson.core:jackson-databind'
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client' // OAuth2 클라이언트
    implementation 'org.springframework.security:spring-security-oauth2-client' // OAuth2 관련 보안
    implementation 'org.springframework.boot:spring-boot-starter-security' // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-validation'
    implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
    // webclient
    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    // elastic search
    implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
    implementation 'co.elastic.clients:elasticsearch-java:8.17.0'


    testImplementation 'io.projectreactor:reactor-test'
    runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
    runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

    // WebSocket
    implementation 'org.springframework.boot:spring-boot-starter-websocket'
    // Redis
    implementation 'org.springframework.boot:spring-boot-starter-data-redis'

    //  spring actuator
    implementation 'org.springframework.boot:spring-boot-starter-actuator'
    // swagger
    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.4'
    compileOnly 'org.projectlombok:lombok'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    developmentOnly 'org.springframework.boot:spring-boot-devtools'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'

    // H2 데이터베이스 (application.yml에서 이미 사용 중)
    testRuntimeOnly 'com.h2database:h2'

    // AssertJ
    testImplementation 'org.assertj:assertj-core'

    // Minio 클라이언트 의존성
    implementation 'io.minio:minio:8.5.7'

    // Kafka 의존성 추가
    implementation 'org.springframework.kafka:spring-kafka'

    // MapStruct 의존성
    implementation 'org.mapstruct:mapstruct:1.5.5.Final'
    annotationProcessor 'org.mapstruct:mapstruct-processor:1.5.5.Final'

    // 머신러닝 라이브러리
//    implementation 'org.apache.spark:spark-mllib_2.12:3.1.2'
    // Weka 라이브러리
    implementation 'nz.ac.waikato.cms.weka:weka-stable:3.8.5'

    implementation 'javax.annotation:javax.annotation-api:1.3.2'
}

tasks.named('test') {
    useJUnitPlatform()
}
